--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         .nav-button:hover {
             background-color: rgb(167, 164, 164);
         }
-        /* 响应式设计 */
+        /* 響應式设计 */
         @media (max-width: 600px) {
             .calendar {
                 grid-template-columns: repeat(7, 1fr);
