--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     summary: '2 Events',
                     details: [
                         '<strong><span style="color: blue;">2024-09-23 18:00</span></strong>',
-                        'Topic: Birthday Party',
+                        'Topic: Happy Birthday Party',
                         'Host: Team Leader',
                         'Location: Rooftop Garden',
                         'Attendees: All team members'
