--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
                         'Attendees: All members'
                     ].join('<br>')
                 },
-                '2024-09-23': {
-                    summary: '2 Events',
+                '2024-7-23': {
+                    summary: '1 Event',
                     details: [
-                        '<strong><span style="color: blue;">2024-09-23 18:00</span></strong>',
-                        'Topic: Happy Birthday Party',
+                        '<strong><span style="color: blue;">2024-10-23 18:00</span></strong>',
+                        'Topic: ',
                         'Host: Team Leader',
                         'Location: Rooftop Garden',
                         'Attendees: All team members'
