--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <h1>Yas Lab Agenda</h1>
     </div>
     <div class="nav-buttons">
-        <button class="nav-button" id="prev-month">Pre</button>
+        <button class="nav-button" id="prev-month">Back</button>
         <div id="month-header" class="month-header">
             <div id="year-header"></div>
             <div id="month-header-text"></div>
