--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 </head>
 <body>
     <div class="header-container">
-        <h1>Yas Lab Agenda</h1>
+        <h1>YAS Lab Agenda</h1>
     </div>
     <div class="nav-buttons">
         <button class="nav-button" id="prev-month">Back</button>
