--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@
 
             const events = { /*在這裡添加行程*/
                 '2024-09-12': {
-                    summary: '1 Event', /*填寫當天有幾個event*/
+                    summary: 'one Event', /*填寫當天有幾個event*/
                     details: [
                         '<strong><span style="color: blue;">2024-09-12 12:00</span></strong>',
                         '<strong>Topic: New Semester meeting</strong>',
-                        'Host: Prof. Shen',
-                        'Location: 8F meeting room',
-                        'Attendees: All members'
+                        '<stong>Host</strong>: Prof. Shen',
+                        '<strong>Location</strong>: 8F meeting room',
+                        '<strong>Attendees</strong>: All members'
                     ].join('<br>')
                 },
                 '2024-07-23': {
