--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
 
             const events = { /*在這裡添加行程*/
                 '2024-09-12': {
-                    summary: 'one Event', /*填寫當天有幾個event*/
+                    summary: 'One Event', /*填寫當天有幾個event*/
                     details: [
                         '<strong><span style="color: blue;">2024-09-12 12:00</span></strong>',
-                        '<strong>Topic: New Semester meeting</strong>',
+                        '<strong>Topic</strong>: New Semester meeting</strong>',
                         '<stong>Host</strong>: Prof. Shen',
                         '<strong>Location</strong>: 8F meeting room',
                         '<strong>Attendees</strong>: All members'
