--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     details: [
                         '<strong><span style="color: blue;">2024-09-12 12:00</span></strong>',
                         '<strong>Topic</strong>: New Semester meeting</strong>',
-                        '<stong>Host</strong>: Prof. Shen',
+                        '<strong>Host</strong>: Prof. Shen',
                         '<strong>Location</strong>: 8F meeting room',
                         '<strong>Attendees</strong>: All members'
                     ].join('<br>')
